# SpatialTimber_FurnisherSurrogate

./: .gitignore  CLAUDE.md  PLAN.md  README.md  SCORING.md  pyproject.toml
.claude/commands/: document.md
data/: data_manifest.json
grasshopper/: 07-cnn surrogate in grasshopper.gh  08-representation.gh  README.md  apartment_reader.py  apartment_writer.py  install_dependencies.py  surrogate_score.py  test.3dm  test.3dmbak  test.gh  test_room_loader.py  test_rooms.json
notebooks/: 00_data_pipeline_test.ipynb  01_data_exploration.ipynb  03-01_data_exploration.ipynb  03_rasterization.ipynb  04-01_rasterization.ipynb  05-01_baseline_lgbm.ipynb  06-01_cnn_training.ipynb
plans/: 01-setup.md  02-data-pipeline.md  03-eda.md  04-rasterization.md  05-baseline-model.md  06-cnn-model.md  07-grasshopper.md  12-circulation.md
reports/: 03-01_eda-findings.html  03-01_eda-findings.ipynb  03-03_apartment_type_eda.html  03-03_apartment_type_eda.ipynb  04-01_rasterization-verification.html  06-01_cnn-model-comparison.html  06-01_cnn-model-comparison.ipynb  07-01_grasshopper-setup.md  eda-findings.html  eda-findings.ipynb  rasterization-verification.html
src/evaluation/: __init__.py  apartment.py
src/evaluation/rules/: circulation.json  composite.json  daylight.json  furnishability.json
src/furnisher_surrogate/: __init__.py  data.py  features.py  models.py  predict.py  rasterize.py  train.py
tests/: test_predict.py
tests/fixtures/: test_rooms.json
tests/fixtures/apartments/: README.md  (+4 more)
tickets/: 00_notebook-numbering.md  02_apartment-type-feature.md  _TEMPLATE.md
