[project]
name = "furnisher-surrogate"
version = "0.1.0"
description = "Surrogate model for furniture placement quality scores"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "numpy",
    "scikit-learn",
    "lightgbm",
    "matplotlib",
    "jupyter",
    "wandb",
    "Pillow",
    "tqdm",
    "joblib",
    "umap-learn",
    "plotly",
    "minisom",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
